--- a/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
+++ b/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
@@ -71,6 +71,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Work.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LSASGlobal.h" />
