--- a/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj.filters
+++ b/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj.filters
@@ -43,6 +43,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Work.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Worker.h">
