--- a/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
+++ b/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Work.cpp" />
+    <ClCompile Include="WorkTable.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LSASGlobal.h" />
