实现模板的格式化字符串输出

--- a/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
+++ b/LifeguardScheduingAutomaticScheduing/LifeguardScheduingAutomaticScheduing.vcxproj
@@ -73,6 +73,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Work.cpp" />
     <ClCompile Include="WorkTable.cpp" />
+    <ClCompile Include="WorkTableGenerateProcesses.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LSASGlobal.h" />
